--- a/croissant/croissant.html
+++ b/croissant/croissant.html
@@ -12,10 +12,10 @@
             <h1>Apa Kek</h1>
         </div>
         <div class="nav-menu">
-            <a href="home.html" class="nav-item">Home</a>
-            <a href="about.html" class="nav-item">About</a>
+            <a href="../home.html" class="nav-item">Home</a>
+            <a href="../about.html" class="nav-item">About</a>
             <a href="../recipe.html" class="nav-item">Recipe</a>
-            <a href="gallery.html" class="nav-item">Gallery</a>
+            <a href="../gallery.html" class="nav-item">Gallery</a>
         </div>
     </div>
     <div class="main">
@@ -93,4 +93,5 @@
         </div>
     </div>
 </body>
+
 </html>
