--- a/nav.html
+++ b/nav.html
@@ -24,7 +24,7 @@
 <body>
     <h2>Menu</h2>
     <a href="about.html" target="mainFrame">About Us</a>
-    <a href="menu.html" target="mainFrame">Bakery Recipe</a>
+    <a href="recipe.html" target="mainFrame">Bakery Recipe</a>
     <a href="gallery.html" target="mainFrame">Gallery</a>
     <a href="contact.html" target="mainFrame">Contact</a>
 
