--- a/about.html
+++ b/about.html
@@ -1,40 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>About Us - Sweet Treats Bakery</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-<div class="container">
-  <div class="menu">
-    <h3>Menu</h3>
-    <ul>
-      <li><a href="about.html">About Us</a></li>
-      <li><a href="recipe.html">Bakery Recipe</a></li>
-      <li><a href="gallery.html">Gallery</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </div>
-
-  <div class="content">
-    <h2>About This Recipe Bakery</h2>
-    <p>Founded in 2025, we are passionate about making bakery.</p>
-
-    <h3>Our Values</h3>
-    <ol>
-      <li>Freshness</li>
-      <li>Quality Ingredients</li>
-      <li>Simple Recipes</li>
-    </ol>
-
-    <h3>Why Choose Us?</h3>
-    <ul>
-      <li>Homemade recipes</li>
-      <li>Easy to make</li>
-      <li>Cheaper ingredients</li>
-    </ul>
-  </div>
-</div>
+    <section id="about" class="content-section">
+        <h2 class="center-title">About Us</h2>
+        <div class="about-box">
+          <p>
+            We believe that the best flavors come from natural ingredients and a personal touch.<br><br>
+            Sweet Bakery started from a simple desire — to make honest bread and cakes,<br>
+            without unnecessary additives, just the pure taste of butter, sugar, and love.<br><br>
+            Through this website, we share the recipes we bake every day — simple, natural, and full of warmth.<br><br>
+            Welcome to our world of sweetness and sincerity 🌾🍞
+          </p>
+        </div>
+      </section>
 </body>
 </html>
