--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@ text-align: center;"><u>📞Here You can Contact Us and Give Us Feedback!📞</u
   <input type="checkbox" id="help" name="help" /> Help
     <input type="checkbox" id="helpful" name="helpful" /> Very helpful
 </form><br/>
-<label for="cars"><p><b>Please rate our website (from 1-5) :</b></p></label>
+<label for="cars"><p><b>Please rate our website ⭐ (from 1-5) :</b></p></label>
 <select id="cars" name="cars">
   <option value="one">1</option>
   <option value="two">2</option>
