--- a/contact.html
+++ b/contact.html
@@ -29,16 +29,12 @@ text-align: center;"><u>📞Here You can Contact Us and Give Us Feedback!📞</u
    <p><b>Choose your favorite Web cake:</b></p>
 
 <form>
-  <input type="radio" id="Croissant" name="fav_language" value="HTML"/>
+  <input type="radio" id="Croissant" name="fav_language" value="croissant"/>
   <label for="Croissant">Croissant</label>
-  <input type="radio" id="cupcake" name="fav_language" value="CSS"/>
-  <label for="cupcake">Cupcake</label>
+  <input type="radio" id="Baguette" name="fav_language" value="Baguette"/>
+  <label for="cupcake">Baguette</label>
   <input type="radio" id="Macaron" name="fav_language" value="macaron"/>
   <label for="macaron">Macaron</label>
-  <input type="radio" id="cookies" name="fav_language" value="Cookies"/>
-  <label for="cookies">Cookies</label>
-  <input type="radio" id="pretzel" name="fav_language" value="pretzel"/>
-  <label for="pretzel">Pretzel</label> az
 </form> <br/>
 <form>
     <p><b>How helpful our website is for you?</b></p>
