--- a/about.html
+++ b/about.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body style="text-align: center; background-color:  #fff3d9;">
     <section id="about" class="content-section">
-        <h2 class="center-title">About Us</h2>
+        <h2 class="center-title">About Us</h2><br/>
+        <br>
         <div class="about-box">
           <p>
             We believe that the best flavors come from natural ingredients and a personal touch.<br><br>
@@ -20,3 +21,4 @@
       </section>
 </body>
 </html>
+
