--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Sweet Bites Bakery</title>
-    <link rel="stylesheet" href="style.css">
+  <title>login_screen</title>
 </head>
-<frameset cols="200,*">
-    <frame src="nav.html" name="leftframe">
-        <frameset rows="500,*">
-    <frame src="home.html" name="main">
-        <noframe>
-            not supported
-        </noframe>
+<frameset rows="60,*">
+  <frame src="head.html" name="atas">
+  <frame src="lobby login.html" name="tengah" > 
 </frameset>
+<noframes>
+  <body style="background-image: url(project/pexels-igor-ovsyannykov-56123-205961.jpg);">
+    
+  </body>
+</noframes>
 </html>
