lobby login.html

--- a/lobby login.html
+++ b/lobby login.html
@@ -21,7 +21,7 @@
         </tr>
         <tr align="center">
             <td colspan="2">
-                <a href="index.html">Login</a>
+                <a href="master.html">Login</a>
             </td>
         </tr>
     </table>
