--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 </head>
 <body style="text-align: center; background-color:  #fff3d9;">
     <section id="about" class="content-section">
-        <h2 class="center-title">About Us</h2><br/>
+        <h2 class="center-title"><u>About Us</u></h2><br/>
         <br>
         <div class="about-box">
           <p>
@@ -21,4 +21,5 @@
       </section>
 </body>
 </html>
+
 
