--- a/master.html
+++ b/master.html
@@ -6,7 +6,7 @@
 </head>
 <frameset cols="200,*">
     <frame src="nav.html" name="leftframe">
-        <frameset rows="500,*">
+        <frameset rows="500*">
     <frame src="home.html" name="main">
         <noframe>
             not supported
