--- a/menu/croissant.html
+++ b/menu/croissant.html
@@ -12,10 +12,10 @@
             <h1>Sweet Site Bakery</h1>
         </div>
         <div class="nav-menu">
-            <a href="home.html" class="nav-item">Home</a>
-            <a href="about.html" class="nav-item">About</a>
+            <a href="../home.html" class="nav-item">Home</a>
+            <a href="../about.html" class="nav-item">About</a>
             <a href="../recipe.html" class="nav-item">Recipe</a>
-            <a href="gallery.html" class="nav-item">Gallery</a>
+            <a href="../gallery.html" class="nav-item">Gallery</a>
         </div>
     </div>
     <div class="main">
@@ -127,4 +127,5 @@ Bake at 200°C (392°F) for 15–20 minutes until golden.</p></li>
         </div>
     </footer>
 </body>
+
 </html>
