--- a/menu/makaron.html
+++ b/menu/makaron.html
@@ -12,10 +12,10 @@
             <h1>Sweet Site Bakery</h1>
         </div>
         <div class="nav-menu">
-            <a href="home.html" class="nav-item">Home</a>
-            <a href="about.html" class="nav-item">About</a>
+            <<a href="../home.html" class="nav-item">Home</a>
+            <a href="../about.html" class="nav-item">About</a>
             <a href="../recipe.html" class="nav-item">Recipe</a>
-            <a href="gallery.html" class="nav-item">Gallery</a>
+            <a href="../gallery.html" class="nav-item">Gallery</a>
         </div>
     </div>
     <div class="main">
@@ -119,4 +119,5 @@ Mix buttercream. Pipe onto one shell, sandwich with another.</p></li>
         </div>
     </footer>
 </body>
+
 </html>
