--- a/menu/makaron.html
+++ b/menu/makaron.html
@@ -12,7 +12,7 @@
             <h1>Sweet Site Bakery</h1>
         </div>
         <div class="nav-menu">
-            <<a href="../home.html" class="nav-item">Home</a>
+            <a href="../home.html" class="nav-item">Home</a>
             <a href="../about.html" class="nav-item">About</a>
             <a href="../recipe.html" class="nav-item">Recipe</a>
             <a href="../gallery.html" class="nav-item">Gallery</a>
@@ -121,3 +121,4 @@ Mix buttercream. Pipe onto one shell, sandwich with another.</p></li>
 </body>
 
 </html>
+
