--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@ text-align: center;"><u>📞Here You can Contact Us and Give Us Feedback!📞</u
     Write your message here...
     </textarea>
 
-   <p><b>Choose your favorite Web cake:</b></p>
+   <p><b>Choose your favorite cake in this web?:</b></p>
 
 <form>
   <input type="radio" id="Croissant" name="fav_language" value="croissant"/>
