--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@ text-align: center;"><u>📞Here You can Contact Us and Give Us Feedback!📞</u
         <div class="contact-container">
           <div class="contact-card">
             <span class="contact-icon">📞</span>
-            <h3>Phone</h3>
+            <h3>WhatsApp</h3>
             <p>+62 822 1000 4820</p>
           </div>
 
